--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -189,6 +189,18 @@ h2 {
     font-weight: bold;
 }
 
+.cardUsers {
+    text-align: start;
+    border-radius: 5px;
+    border: 2px solid #D9D9D9;
+    gap: 2px;
+    padding: 2rem;
+}
+
+.cardUsers p {
+    margin: 0.3rem;
+}
+
 @keyframes fadeInAnimation {
     0% {
         opacity: 0.3;
